[package]
name = "test-programs"
version = "0.0.0"
authors = ["The Wasmtime Project Developers"]
edition.workspace = true
rust-version.workspace = true
publish = false
license = "Apache-2.0 WITH LLVM-exception"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, features = ['std'] }
wasi = "0.13.2"
wasi-nn = "0.6.0"
wit-bindgen = { workspace = true, features = ['default'] }
libc = { workspace = true }
getrandom = "0.2.15"
futures = { workspace = true, default-features = false, features = ['alloc'] }
url = { workspace = true }
sha2 = "0.10.8"
base64 = "0.22.1"
